--- a/web-app/package.json
+++ b/web-app/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:mock": "NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL:-http://localhost:4010} next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
