--- a/web-app/package.json
+++ b/web-app/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev",
     "dev:mock": "NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL:-http://localhost:4010} next dev",
     "build": "next build",
+    "prestart": "next build",
     "start": "next start",
+    "start:dev": "next dev",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "format": "prettier --check \"**/*.{js,jsx,mjs,ts,tsx,mdx}\" --cache",
