chore: sync BudgetApp changes

--- a/web-app/.env.example
+++ b/web-app/.env.example
@@ -1,5 +1,10 @@
-# URL base usada por la app web para consumir la API (apuntar al mock si el backend no está disponible)
-NEXT_PUBLIC_API_BASE_URL=http://localhost:4010
+# URL base usada por la app web para consumir la API.
+# Deja esta variable vacía para que el frontend use el mismo host que el backend (recomendado).
+#NEXT_PUBLIC_API_BASE_URL=https://api.mi-budgetapp.test
+
+# Si necesitas que el frontend use forzosamente NEXT_PUBLIC_API_BASE_URL incluso en el navegador,
+# habilita este flag.
+#NEXT_PUBLIC_API_STRICT_BASE=true
 
 # URL pública de la aplicación (para links/callbacks)
 NEXT_PUBLIC_APP_URL=http://localhost:3000
